<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.weigend</groupId>
        <artifactId>structure202-parent</artifactId>
        <version>1.0.0</version>
        <relativePath>..</relativePath>
    </parent>

    <artifactId>s202-code-analyzer</artifactId>
    <packaging>jar</packaging>

    <name>S202 Code Analyzer</name>
    <description>JavaFX Tool zur Analyse von Code</description>

    <properties>
        <javafx.version>21.0.5</javafx.version>
        <wfx.version>1.0.1</wfx.version>
        <avaje.version>11.4</avaje.version>
    </properties>

    <dependencies>
        <!-- WFX Rich Client Platform (provides JavaFX, Avaje, SLF4J, Commons Lang3) -->
        <dependency>
            <groupId>io.softwareecg.wfx</groupId>
            <artifactId>wfx-all</artifactId>
            <version>${wfx.version}</version>
        </dependency>

        <!-- Auto-built top-level "View" menu listing all TOOL views.
             Opt-in: not bundled into wfx-all so apps can choose. -->
        <dependency>
            <groupId>io.softwareecg.wfx</groupId>
            <artifactId>view-menu</artifactId>
            <version>${wfx.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Logging runtime -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.20</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Icons (Material Design pack via Ikonli) -->
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-materialdesign2-pack</artifactId>
            <version>12.3.1</version>
        </dependency>

        <!-- JavaFX (pinned to wfx version for the javafx-maven-plugin run goal) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- Bytecode Analysis -->
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.6</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-tree</artifactId>
            <version>9.6</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-analysis</artifactId>
            <version>9.6</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.avaje</groupId>
                            <artifactId>avaje-inject-generator</artifactId>
                            <version>${avaje.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>de.weigend.s202.ui.wfx.S202Main</mainClass>
                </configuration>
            </plugin>
          <!-- generated by avaje inject -->
      <plugin>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-inject-maven-plugin</artifactId>
        <version>11.4</version>
        <executions>
          <execution>
            <?m2e execute?>
            <phase>process-sources</phase>
            <goals>
              <goal>provides</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    </build>

</project>
